crates/cockpitctl-conform/tests/snapshots/snapshot_expansion_wave34__all_checks_clean_report.snap
---
source: crates/cockpitctl-conform/tests/snapshot_expansion_wave34.rs
expression: result
---
ConformResult {
    violations: [],
}
