crates/cockpitctl-conform/tests/snapshots/snapshot_expansion_wave34__all_checks_multiple_violations.snap
---
source: crates/cockpitctl-conform/tests/snapshot_expansion_wave34.rs
expression: result
---
ConformResult {
    violations: [
        Violation {
            check: "schema",
            message: "\"\" is shorter than 1 character",
        },
    ],
}
