crates/cockpitctl-conform/tests/snapshots/snapshot_expansion_wave34__cockpit_extended_bad_reasons.snap
---
source: crates/cockpitctl-conform/tests/snapshot_expansion_wave34.rs
expression: violations
---
[
    Violation {
        check: "reason_lint",
        message: "verdict.reasons[0]: invalid token \"BAD-REASON\"",
    },
]
