crates/cockpitctl-conform/tests/snapshots/snapshot_expansion_wave34__cockpit_extended_clean.snap
---
source: crates/cockpitctl-conform/tests/snapshot_expansion_wave34.rs
expression: violations
---
[]
