crates/cockpitctl-conform/tests/snapshots/snapshot_expansion_wave34__path_hygiene_only_violation.snap
---
source: crates/cockpitctl-conform/tests/snapshot_expansion_wave34.rs
expression: result
---
ConformResult {
    violations: [
        Violation {
            check: "path_hygiene",
            message: "finding[0]: path traversal (contains ..): ../../etc/shadow",
        },
        Violation {
            check: "path_hygiene",
            message: "finding[1]: absolute path (starts with / or \\): /usr/bin/env",
        },
        Violation {
            check: "path_hygiene",
            message: "finding[2]: backslash in path: src\\main.rs",
        },
    ],
}
