crates/cockpitctl-conform/tests/snapshots/snapshot_expansion_wave34__tool_error_identity_violation.snap
---
source: crates/cockpitctl-conform/tests/snapshot_expansion_wave34.rs
expression: result
---
ConformResult {
    violations: [
        Violation {
            check: "tool_error_identity",
            message: "verdict.reasons contains \"tool_error\" but no finding has check_id=\"tool.runtime\" + code=\"runtime_error\"",
        },
    ],
}
